--- a/Basics.Web/Client/wwwroot/index.html
+++ b/Basics.Web/Client/wwwroot/index.html
@@ -10,7 +10,9 @@
     <link href="css/app.css" rel="stylesheet" />
     <link href="manifest.json" rel="manifest" />
     <link rel="apple-touch-icon" sizes="512x512" href="icon-512.png" />
-    
+
+    <script src="./two.min.js" type="text/javascript"></script>
+    <script src="./TwoDrawingContainer.js" type="text/javascript"></script>
     <script src="./DrawingContainer.js" type="text/javascript"></script>
 </head>
 
